[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "django-pipeline"
requires-python = ">=3.9"
version = "4.0.0"
description = "Pipeline is an asset packaging library for Django."
readme = "README.rst"
authors = [{ "name" = "Timothée Peignier", "email" = "timothee.peignier@tryphon.org" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
keywords = [
    "django",
    "pipeline",
    "asset",
    "compiling",
    "concatenation",
    "compression",
    "packaging",
]
dependencies = [
    # indirect dependencies
    "setuptools",
    "wheel",
]

[project.optional-dependencies]
testing = [
    "coveralls",
    "tox",
    "wheel",
    "django",
]

[project.urls]
homepage = "https://github.com/jazzband/django-pipeline/"
documentation = "https://django-pipeline.readthedocs.io/"
repository = "https://github.com/jazzband/django-pipeline"
changelog = "https://github.com/jazzband/django-pipeline/blob/master/HISTORY.rst"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests", "tests.tests"]

[tool.setuptools_scm]
local_scheme = "dirty-tag"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
